--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,6 +40,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Fiction'
 - !lcc 'PT'
+- GITenberg
 title: 'Erkki Ollikainen
 
   Historiallis-romantillinen kertomus Sandels''in sotaliikkeistä Itä-Suomessa v. 1808'
